Update extension name and version in manifest

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Hello, World!",
-  "version": "1.0.0",
+  "name": "Minha Primeira Extensão",
+  "version": "1.0.1",
   "manifest_version": 1,
   "action": {
     "title": "Hello, World!",
