--- a/manifest.json
+++ b/manifest.json
@@ -2,6 +2,7 @@
   "name": "Minha Primeira Extensão",
   "version": "1.0.1",
   "manifest_version": 1,
+  "author": "Luis Dev JR.",
   "action": {
     "title": "Hello, World!",
     "icon": "/icon.svg",
